<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="com.srijan.travelapp.viewmodels.LoginViewModel" />
    </data>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:layout_height="150dp"
                android:src="@drawable/login_bg"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppinsbold"
                android:text="@string/welcome_back"
                android:alpha="0.8"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:text="@string/sign_in_to_continue"
                android:alpha="0.5"
                android:layout_marginStart="15dp"
                android:textColor="@color/black"
                android:textSize="13sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="15dp"
                android:layout_marginTop="30dp"
                android:alpha="0.7"
                android:fontFamily="@font/poppinsmedium"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="16sp" />


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="false"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeColor="@color/black"
                style="@style/LoginTextInputLayoutStyle"
                android:id="@+id/email_box"
                android:layout_marginHorizontal="15dp"
                >

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:padding="0dp"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"
                    android:fontFamily="@font/roboto_regular"
                    android:textSize="16sp"
                    android:id="@+id/email"
                    android:singleLine="true"
                    android:hint="@string/enter_your_email"
                    android:layout_marginStart="-12dp"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="15dp"
                android:layout_marginTop="30dp"
                android:alpha="0.7"
                android:fontFamily="@font/poppinsmedium"
                android:text="@string/password"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="false"
                app:boxBackgroundColor="@color/white"
                style="@style/LoginTextInputLayoutStyle"
                android:id="@+id/password_box"
                android:layout_marginHorizontal="15dp"
                app:passwordToggleEnabled="true">


                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:padding="0dp"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:fontFamily="@font/roboto_regular"
                    android:textSize="16sp"
                    android:id="@+id/password"
                    android:singleLine="true"
                    android:hint="@string/enter_your_password"
                    android:layout_marginStart="-12dp"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:cardBackgroundColor="@color/dark_skin"
                app:cardCornerRadius="10dp"
                android:foreground="?attr/selectableItemBackground"
                android:clickable="true"
                android:id="@+id/login"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="40dp"
                android:focusable="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/log_in"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:fontFamily="@font/roboto_medium"/>


            </androidx.cardview.widget.CardView>


            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:layout_marginVertical="20dp"
                android:visibility="visible"
                android:layout_height="wrap_content">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:layout_marginEnd="16dp"
                    android:layout_gravity="center_vertical"
                    android:background="@color/grey"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:text="@string/or"
                    android:layout_gravity="center_vertical"
                    android:alpha="0.5"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="16dp"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:background="@color/grey"
                    />


            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:text="@string/create_your_account_here"
                android:textColor="@color/dark_skin"
                android:textSize="16sp"
                android:drawableTint="@color/dark_skin"
                app:drawableRightCompat="@drawable/ic_next_arrow" />




        </LinearLayout>

    </ScrollView>


</RelativeLayout>
</layout>