<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:id="@+id/cross"
            android:src="@drawable/ic_cross"
            app:tint="@color/black"
            android:layout_margin="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            app:cardBackgroundColor="@color/dark_skin"
            app:cardCornerRadius="3dp"
            android:foreground="?attr/selectableItemBackground"
            android:clickable="true"
            android:id="@+id/publish"
            android:focusable="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_margin="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/publish"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:layout_margin="7dp"
                android:paddingHorizontal="10dp"
                android:fontFamily="@font/roboto_medium"/>


        </androidx.cardview.widget.CardView>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/title"
            android:fontFamily="@font/poppinsbold"
            android:hint="@string/add_a_title"
            android:textColorHint="@color/grey"
            android:alpha="0.8"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:maxLines="2"
            app:layout_constraintTop_toBottomOf="@id/cross"
            app:layout_constraintStart_toStartOf="parent"
            android:backgroundTint="@color/dark_skin"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsbold"
            android:text="@string/add_location"
            android:alpha="0.8"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/grey"
            android:textSize="16sp"
            android:id="@+id/location"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintStart_toStartOf="parent"
            app:drawableStartCompat="@drawable/ic_location" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tag"
            android:background="@color/skin"
            android:padding="5dp"
            android:layout_marginTop="20dp"
            android:entries="@array/category_array"
            android:theme="@style/ThemeOverlay.MaterialComponents.Light"
            android:spinnerMode="dropdown"
            android:layout_marginHorizontal="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/location"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:alpha="0.7"
            android:id="@+id/speed_text"
            android:fontFamily="@font/poppinsmedium"
            android:text="@string/how_much"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/tag"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="15dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/speed_container"
            app:layout_constraintTop_toBottomOf="@id/speed_text"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="15dp"
            >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/distance"
                android:fontFamily="@font/poppinsmedium"
                android:hint="@string/duration"
                android:textColorHint="@color/black"
                android:alpha="0.8"
                android:clickable="false"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:singleLine="true"
                android:layout_weight="1"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/duration"
                android:fontFamily="@font/poppinsmedium"
                android:hint="@string/time"
                android:textColorHint="@color/black"
                android:alpha="0.8"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:clickable="false"
                android:maxLines="10"
                android:singleLine="true"
                android:layout_weight="1"
                />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:alpha="0.7"
            android:id="@+id/datetime_text"
            android:fontFamily="@font/poppinsmedium"
            android:text="@string/when"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/speed_container"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="15dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/datetime_container"
            app:layout_constraintTop_toBottomOf="@id/datetime_text"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="15dp"
            android:weightSum="2"
            >

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/date"
                android:fontFamily="@font/poppinsmedium"
                android:hint="@string/choose_date"
                android:textColorHint="@color/black"
                android:alpha="0.8"
                android:clickable="false"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:maxLines="10"
                android:singleLine="true"
                android:layout_weight="1"
                />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/time"
                android:fontFamily="@font/poppinsmedium"
                android:hint="@string/choose_time"
                android:textColorHint="@color/black"
                android:alpha="0.8"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:clickable="false"
                android:maxLines="10"
                android:singleLine="true"
                android:layout_weight="1"
                />

        </LinearLayout>




    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>